Kubernetes-Gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
spec:
  parentRefs:
    - name: demo-gateway
  rules:
    - backendRefs:
        - name: app-v1
          port: 80
          weight: 50
        - name: app-v2
          port: 80
          weight: 50
